// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "paddingTop": 3,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(0,0,0)",
        "flexDirection": "row",
        "height": 150,
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 150,
            "width": "100%",
          },
          Object {
            "opacity": 0.4,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "padding": 20,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 20,
          }
        }
      >
        Beginner
      </Text>
    </View>
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 100,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 14,
            "textAlign": "right",
          }
        }
      >
        0
        /
        1
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#f1f1f1",
            "borderRadius": 2,
            "height": 3,
            "marginTop": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": "#232b2b",
                "borderRadius": 5,
                "width": "50%",
              },
              Object {
                "width": "0%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<Program /> renders correctly when finished 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "paddingTop": 3,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgb(0,0,0)",
        "flexDirection": "row",
        "height": 150,
        "justifyContent": "space-evenly",
        "width": "100%",
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 150,
            "width": "100%",
          },
          Object {
            "opacity": 0.4,
          },
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "padding": 20,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 20,
          }
        }
      >
        Beginner
      </Text>
    </View>
    <View
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 20,
          "paddingVertical": 100,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 14,
            "textAlign": "right",
          }
        }
      >
        2
        /
        2
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#f1f1f1",
            "borderRadius": 2,
            "height": 3,
            "marginTop": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "backgroundColor": "#232b2b",
                "borderRadius": 5,
                "width": "50%",
              },
              Object {
                "width": "100%",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
